Prevent Text Overflow On Posts And Comments

--- a/src/components/homepage/post/Comment.module.css
+++ b/src/components/homepage/post/Comment.module.css
@@ -6,3 +6,7 @@
 .comment {
   border-bottom: 1px solid var(--border-color);
 }
+
+.text {
+  word-break: break-all;
+}
