--- a/src/components/homepage/postPreview/PostPreview.module.css
+++ b/src/components/homepage/postPreview/PostPreview.module.css
@@ -15,6 +15,10 @@
   background-color: var(--post-hover-color);
 }
 
+.text {
+  word-break: break-all;
+}
+
 .topRow {
   display: flex;
   gap: 10px;
